--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@floating-ui/react-dom": "^2.1.2",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.1",
+    "@once-ui-system/magic-portfolio": "file:",
+    "@supabase/supabase-js": "^2.49.5",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^5.2.5",
     "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
